--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,7 +60,6 @@ h1,h2,h3,h4,h5,h6 {
 header{
     width:100%;
     background-color:$primary;
-    padding-top: 1em;
     position:relative;
 }
 
@@ -655,3 +654,16 @@ h5.details-title {
  .peek a {
    color: $primary;
  }
+
+button.material-icons {
+  background: none;
+  cursor: pointer;
+  font-size: 1.5em;
+  color: #fff;
+  border: none;
+  margin: 0px;
+  padding: 0px;
+  font-weight: bold;
+  padding: 2em;
+  margin: -2em;
+}
