anchor logo to bottom of black bar

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,7 +74,7 @@ header{
     height: 3em;
     width:auto;
     color:#fff;
-    margin: 0 0 -2px -2px;
+    background-position: -2px 2px;
 }
 
 .wordmark-container{
