--- a/sass/main.scss
+++ b/sass/main.scss
@@ -699,13 +699,15 @@ button.material-icons {
     padding-top:5px;
 }
 .pageText h3{
-    font-size: 1em;
-    text-transform:uppercase;
+    font-size: .85em;
     width: 100%;
     text-align: left;
     margin: 0;
     margin-top:2em;
     line-height: 1em;
+    font-family: $MiaGroteskBold, sans-serif;
+    border-top:1px solid $primary;
+    padding-top:5px;
 }
 
 .pageText p{line-height: 1.4em;margin:0.5em 0;}
