pull fonts from s3

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "reset.scss";
 @import "brand-colors.scss";
 @import "ui-icons-font.scss";
+@import "mia-font.scss";
 
 $MiaGroteskBold: 'MiaGrotesk-Bold', sans-serif;
 $MiaGroteskBoldItalic: 'MiaGrotesk-BoldItalic', sans-serif;
