--- a/sass/mia-font.scss
+++ b/sass/mia-font.scss
@@ -2,57 +2,57 @@
 
 @font-face {
   font-family: 'MiaGrotesk-Bold';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Bold.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Bold.svg#svgMiaGrotesk-Bold') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Bold.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Bold.svg#svgMiaGrotesk-Bold') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-BoldItalic';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BoldItalic.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BoldItalic.svg#svgMiaGrotesk-BoldItalic') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BoldItalic.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BoldItalic.svg#svgMiaGrotesk-BoldItalic') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-Italic';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Italic.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Italic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Italic.svg#svgMiaGrotesk-Italic') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Italic.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Italic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Italic.svg#svgMiaGrotesk-Italic') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-Light';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Light.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Light.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Light.svg#svgMiaGrotesk-Light') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.svg#svgMiaGrotesk-Light') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-LightItalic';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-LightItalic.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-LightItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-LightItalic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-LightItalic.svg#svgMiaGrotesk-LightItalic') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-LightItalic.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-LightItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-LightItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-LightItalic.svg#svgMiaGrotesk-LightItalic') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-Regular';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Regular.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Regular.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Regular.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Regular.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-Black';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Black.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Black.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-Black.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Black.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Black.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Black.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
 }
 @font-face {
   font-family: 'MiaGrotesk-BlackItalic';
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BlackItalic.eot'); /* IE9 Compat Modes */
-  src: url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BlackItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BlackItalic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/wp-content/themes/new_artsmia/webfonts/MiaGrotesk-BlackItalic.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BlackItalic.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BlackItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BlackItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BlackItalic.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
 }
