--- a/sass/main.scss
+++ b/sass/main.scss
@@ -281,13 +281,7 @@ header{
     .objects-focus .tombstone{
         margin-bottom:1em;
         font-size:smaller;
-<<<<<<< HEAD
-        line-height:1.3em;
-        line-height:1.2em;
-        width: 75%;
-=======
         line-height:1.4em;
->>>>>>> initial peek styles
     }
 
     .objects-focus .artwork-image{
@@ -878,4 +872,21 @@ hr{margin:0;}
 
 .peek .more-results-link:hover{
     color:rgba(255,255,255,.5);
+}
+
+.open i {
+    background-color:#ededed;
+    display: inline-block;
+    padding:5px;
+}
+
+.open i > span{
+    padding-left:10px;
+}
+
+.tombstone .open i {
+    margin-top:15px;
+    padding: 0 5px 7px 2px;
+    line-height:1em;
+    
 }
