smaller peek handle icons

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -434,8 +434,9 @@ header{
   color: #ffffff;
 }
 .peek i.material-icons{
-  position: relative;
-  top: 7px;
+  font-size: 0.77em;
+  margin-left: 0.1em;
+  padding-right: .5em;
 }
 /* ===== LANDING PAGE STYLES ===== */
 .landingPageBody, .departmentPage {
