--- a/sass/main.scss
+++ b/sass/main.scss
@@ -884,9 +884,10 @@ hr{margin:0;}
     padding-left:10px;
 }
 
+.peek.startedClosed.open {
+  margin-bottom: 5px
+}
 .tombstone .open i {
-    margin-top:15px;
-    padding: 0 5px 7px 2px;
+    padding: 5px 5px 7px 2px;
     line-height:1em;
-    
 }
