don't init leaflet without valid tiles

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -600,6 +600,7 @@ a.departmentLink h2{
   width: 65%;
   height: calc(100vh - 4em);
   z-index: 1000;
+  background-color: #ddd;
 }
 .artwork .sticky #map {
   width: 100%;
