--- a/sass/main.scss
+++ b/sass/main.scss
@@ -532,6 +532,9 @@ a.departmentLink h2{
   margin-top:0.7em;
   line-height: 1em;
 }
+.departmentPage h2 span.d-visit{
+    display:none;
+}
 .departmentContent, .departmentResources {
   padding: 0 5px;
 }
@@ -900,4 +903,87 @@ hr{margin:0;}
 .tombstone .open i {
     padding: 5px 5px 7px 2px;
     line-height:1em;
+}
+
+/* ===== decorator STYLES ===== */
+
+.decorator-wrap{
+    width:100%;
+    background-color:rgba(35,35,35,0.8);
+    
+    display: -webkit-flex;
+    display:flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding:1.5rem;
+}
+
+.decorator-wrap>.decorator{
+    color:#fff;
+    text-align:left;
+    max-width:50%;
+    margin:0;
+    display: -webkit-flex;
+    display:flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    
+}
+
+.decorator-wrap>.decorator h2{
+    border:3px solid white;
+    color:white;
+    max-width:250px;
+    margin-top:1rem;
+    padding:0;
+    text-align:left;
+    align-self: flex-start;
+    order:1;
+}
+
+.decorator-wrap>.decorator h2:hover, .decorator-wrap>.decorator h2>a:hover{
+    border-color:rgba(255,255,255,0.65);
+    color:rgba(255,255,255,0.65);
+}
+
+.decorator-wrap>.decorator h2 a{
+    display:inline-block;
+    width:100%;
+    padding:0.68rem;
+    line-height:1.3em;
+    color:white;
+}
+.d-highlights{}
+.d-gallery{}
+.d-department{}
+
+.d-gallery img{max-width:150px;height:auto;margin-right:1rem;align-self: flex-start;}
+.d-gallery h3{line-height:1.3em;margin-top:1rem;}
+.decorator-wrap>.d-department>.departmentContent{margin-left:0;padding-left:0;width:100%;align-self: flex-start;}
+.decorator-wrap>.d-department>.departmentContent p{padding-left:0;}
+
+.bigflex {
+   -webkit-flex: 2 0 0; 
+   flex: 2 0 0; 
+}
+.smallflex {
+   -webkit-flex: 1 0 0;
+   flex: 1 0 0;
+}
+
+@media screen and (max-width: 768px) {
+  .decorator-wrap{
+     -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  .decorator-wrap>.decorator{margin-bottom:1em;}
+  .decorator-wrap>.decorator:last-child{margin-bottom:0;}
 }
