--- a/sass/main.scss
+++ b/sass/main.scss
@@ -187,22 +187,24 @@ header{
     .artwork-result h1{margin:0;padding:0;}
     .artwork-result h2{margin:0;padding:0;line-height:1em;}
 
-    .objects-wrap .artwork-image{
+    .artwork-result.validImage, .universal .artwork-result {
+      .artwork-image{
         width: 50%;
         float: left;
         text-align: center;
-    }
-    .artwork-summary {
-      width: 50%;
-      float: right;
-      padding-left: 10px;
-    }
-    .objects-wrap .artwork-image > div {
-        max-height: 200px !important;
-    }
-    .objects-wrap .artwork-image img {
-        max-width: 100%;
-        max-height: 100%;
+      }
+      .artwork-summary {
+        width: 50%;
+        float: right;
+        padding-left: 10px;
+      }
+      .artwork-image > div {
+          max-height: 200px !important;
+      }
+      .artwork-image img {
+          max-width: 100%;
+          max-height: 100%;
+      }
     }
 
     .objects-wrap .focused {
