--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1033,24 +1033,14 @@ hr{margin:0;}
 
 /* ===== invalid (no image) STYLES ===== */
 
-.quilt-wrap{
-}
-
 .quilt-row-wrap{
     display:flex;
-    padding:2px 1px 0 1px;
-    background:rgba(0,0,0,.1);
-}
-
-.lazy-load-visible{
-     border:3px solid rgba(0,0,0,.1);
-     border-width:0 1px;
+    background:white;
 }
 
 .invalid{
-    border:3px solid rgba(0,0,0,.1);
-    background-color:white;
-    border-width:0 1px;
+    margin: 2px;
+    background:url(../images/no-image-bg.png) repeat top left;
     flex-grow:1;
     min-height:6.25rem;
 }
@@ -1061,8 +1051,4 @@ hr{margin:0;}
     font-family: $MiaGroteskBold;
     display:block;
     height:100%;
-}
-
-.invalid:hover{
-    background-color:rgba(255,255,255, 0.75);
 }
