--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1049,6 +1049,6 @@ hr{margin:0;}
     padding:1em;
     line-height:1em;
     font-family: $MiaGroteskBold;
-    display:block;
-    height:100%;
+    display:table-cell;
+    vertical-align: middle;
 }
