--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1043,6 +1043,17 @@ hr{margin:0;}
     background:url(../images/no-image-bg.png) repeat top left;
     flex-grow:1;
     min-height:6.25rem;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+ .lazy-load-visible{
+	-webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+ }
+
+.invalid:hover, .lazy-load-visible:hover{
+	opacity:0.68;
 }
 
 .invalid p{
